# FreeUV

./: .gitignore  README.md  inference.py  pyproject.toml
data-process/: README.md  config.py  networks.py  step_post_0_color_transfer.py  step_post_1_render_texture.py  step_pre_0_preprocess.py  step_pre_1_data_prepare.py
data-process/python_color_transfer/: masked_color_transfer.py
data-process/results/: mm_param.npz
data-process/utils/: mm_layer.py
detail_encoder/: encoder_freeuv.py  resampler.py
